# leafy

./: .gitignore  .gitmodules  Cargo.toml  License  README.md  docker-compose.yml  todo.md
.github/: FUNDING.yml
.github/workflows/: deploy.yml
assets/: sugerencia.png~
database/: your-database-files-here.txt
src/: events.rs  main.rs  test.rs
src/commands/: ai.rs  blacklist.rs  generate_furry.rs  generate_pride.rs  get_forbidden_role.rs  get_forbidden_user.rs  get_joke.rs  get_log_channel.rs  get_timeout_role.rs  get_timeout_timer.rs  help.rs  joke.rs  mod.rs  ping.rs  screenshot_this.rs  set_forbidden_role.rs  set_forbidden_user.rs  set_log_channel.rs  set_timeout_role.rs  set_timeout_timer.rs  top_words.rs  translate.rs
src/commands/audio/: join.rs  leave.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs  translate_tts.rs  tts.rs
src/commands/audio/music/: mod.rs  play.rs  queue.rs  resume.rs  stop.rs
src/commands/audio/tts/: mod.rs  translate_tts.rs  tts_command.rs
src/commands/fun/: cat.rs  generate_dumb.rs  generate_furry.rs  generate_pride.rs  mod.rs  say.rs  screenshot_this.rs
src/commands/getters/: get_admins.rs  get_forbidden_exception.rs  get_forbidden_role.rs  get_forbidden_user.rs  get_joke.rs  get_log_channel.rs  get_ooc_channel.rs  get_timeout_role.rs  get_timeout_timer.rs  get_welcome_channel.rs  mod.rs
src/commands/info/: help.rs  mod.rs  ping.rs
src/commands/lessons/: rust.rs
src/commands/moderation/: get_forbidden_exception.rs  get_timeout_timer.rs  mod.rs  set_forbidden_exception.rs
src/commands/moderation/getters/: get_admins.rs  get_exception_channel.rs  get_forbidden_exception.rs  get_forbidden_role.rs  get_forbidden_user.rs  get_log_channel.rs  get_ooc_channel.rs  get_timeout_timer.rs  get_welcome_channel.rs  mod.rs
src/commands/moderation/setters/: mod.rs  set_admins.rs  set_autorole_id.rs  set_autorole_message.rs  set_exception_channel.rs  set_forbidden_exception.rs  (+12 more)
src/commands/setters/: mod.rs  set_admins.rs  set_forbidden_exception.rs  set_forbidden_role.rs  set_forbidden_user.rs  set_joke.rs  set_joke_channel.rs  set_log_channel.rs  set_ooc_channel.rs  set_timeout_message.rs  set_timeout_role.rs  set_timeout_timer.rs  set_to_blacklist.rs  set_warn_message.rs  set_welcome_channel.rs  set_welcome_message.rs
src/handlers/: error.rs  events.rs  goodbye.rs  interactions.rs  mod.rs  presence_handler.rs  twitter.rs  typing_start.rs  welcome.rs  welcome_event.rs
src/handlers/messages/: deleted.rs  deleted_messages.rs  edited.rs  edited_messages.rs  mod.rs  sent.rs  sent_messages.rs
src/handlers/misc/: attachment_case.rs  buttons.rs  everyone_case.rs  exceptions.rs  forbidden_mentions.rs  link_spam_handler.rs  mod.rs  reaction_add.rs  reaction_remove.rs  warns.rs
src/handlers/music_events/: mod.rs
src/utils/: autocomplete.rs  config.rs  debug.rs  embeds.rs  error.rs  events.rs  log_msgs.rs  metadata.rs  mod.rs
src/utils/handlers/: deleted_messages.rs  edited_messages.rs  error.rs  message.rs  mod.rs  sent_messages.rs  welcome_event.rs
src/utils/misc/: autocomplete.rs  config.rs  debug.rs  embeds.rs  mod.rs
(+9 files in other folders)
