[package]
name = "plantita_ayudante"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1-rc1"
tokio = "1.28.1"
serenity = "0.12.0"
serde = "1.0.164"
reqwest = "0.11.22"
env_logger = "0.10.0"
dotenvy = "0.15.7"
chrono = "0.4.26"
pretty_env_logger = "0.5.0"
surrealdb = "1.1"
once_cell = "1.18.0"
thiserror = "1.0.49"
image = "0.24.7"
regex = "1.10.2"
plantita_welcomes = { git = "https://github.com/CrawKatt/plantita_welcomes.git", features = ["create_phrases", "create_welcome"] }
plantita_audio = { git = "https://github.com/CrawKatt/plantita_audio.git" }
imageproc = "0.23.0"
rusttype = "0.9.3"