[package]
name = "plantita_ayudante"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Necesario para que songbird pueda reproducir archivos de audio
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current" }
tokio = "1.28.1"
serenity = "0.12.0"
songbird = { version = "0.4.1", features = ["builtin-queue"] }
serde = "1.0.164"
reqwest = "0.11.22"
env_logger = "0.10.0"
dotenvy = "0.15.7"
chrono = "0.4.26"
pretty_env_logger = "0.5.0"
surrealdb = "1.5.1"
thiserror = "1.0.49"
image = "0.24.7"
regex = "1.10.2"
plantita_welcomes = { git = "https://github.com/CrawKatt/plantita_welcomes.git", features = ["create_phrases", "create_welcome"] }
plantita_audio = { git = "https://github.com/CrawKatt/plantita_audio.git" }
plantita_macros = { git = "https://github.com/CrawKatt/plantita_macros.git" }